<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_16_dp"
        android:text="@string/login_here"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_18sp"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:textColor="@color/color_white"
        android:padding="@dimen/dim_16_dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_gmail_id"
        android:id="@+id/id_gmail_login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:padding="@dimen/dim_16_dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:id="@+id/id_password_login"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="@dimen/dim_16_dp"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/dim_16_dp"
            android:layout_marginStart="@dimen/dim_16_dp"
            android:id="@+id/id_login"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/dim_16_dp"
            android:layout_marginStart="@dimen/dim_16_dp"
            android:id="@+id/id_cancel_login"/>
    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:padding="@dimen/dim_16_dp"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:id="@+id/id_register_here"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:text="@string/not_yet_registered_registered_here"/>
</LinearLayout>