<resources>
    <string name="app_name">SuperHero</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="all">All Characters</string>
    <string name="fav">Favourites</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="isLogged">IsLogged</string>
    <string name="noInternet">No Internet</string>
    <string name="passwordsNoMatch">Passwords Didnot Match</string>
    <string name="requiresPassword">Requires Password</string>
    <string name="requiresusername">Requires Username</string>
    <string name="authenticationFailed">Authentication Failed</string>
    <string name="logout">Log Out</string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_gmail_id">Enter your gmail id</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="not_yet_registered_registered_here">Not Yet Registered?Registered Here</string>
    <string name="register_here">Register Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account?Login Here</string>
    <string name="biography">Biography</string>
    <string name="appearance">Appearance</string>
    <string name="work">Work</string>
    <string name="WidgetLogOff">Log In to view Widgets</string>
    <string name="noFavAdded">No Favourites Added</string>
    <string name="deleted_from_fav">Deleted from Favorites</string>
    <string name="redirecting_fav">Redirecting to Favourites</string>
    <string name="dismiss">Dismiss</string>
    <string name="loadingData">Loading Data</string>
    <string name="url">http://www.superheroapi.com/api.php/637269243272697/</string>
    <string name="notKnown">Not Known</string>
    <string name="nullString">null</string>
    <string name="json_id">id</string>
    <string name="json_name">name</string>
    <string name="json_power">powerstats</string>
    <string name="json_intelligence">intelligence</string>
    <string name="strength">strength</string>
    <string name="json_speed">speed</string>
    <string name="json_durability">durability</string>
    <string name="json_power_data">power</string>
    <string name="json_combat">combat</string>
    <string name="json_bio">biography</string>
    <string name="json_fullname">full-name</string>
    <string name="json_alter">alter-egos</string>
    <string name="json_aliases">aliases</string>
    <string name="json_birth">place-of-birth</string>
    <string name="json_first_app">first-appearance</string>
    <string name="json_publisher">publisher</string>
    <string name="json_alignment">alignment</string>
    <string name="json_appearance">appearance</string>
    <string name="json_gender">gender</string>
    <string name="json_race">race</string>
    <string name="json_height">height</string>
    <string name="json_weight">weight</string>
    <string name="json_eye">eye-color</string>
    <string name="json_hair">hair-color</string>
    <string name="json_work">work</string>
    <string name="json_occupation">occupation</string>
    <string name="json_base">base</string>
    <string name="json_connections">connections</string>
    <string name="json_group">group-affiliation</string>
    <string name="json_relatives">relatives</string>
    <string name="json_image">image</string>
    <string name="json_url">url</string>
    <string name="ok">Ok</string>
    <string name="add_initialize">ca-app-pub-6336523906622902~6817819328</string>
    <string name="displayName">Name:</string>
    <string name="intelligenceDisplay">Intelligence:</string>
    <string name="strengthDisplay">Strength:</string>
    <string name="speedDisplay">Speed:</string>
    <string name="durabilityDisplay">Durability:</string>
    <string name="powerDisplay">Power:</string>
    <string name="combatDisplay">Combat:</string>
    <string name="fullnameDisplay">Full Name:</string>
    <string name="alterEgosDisplay">Alter Egos:</string>
    <string name="aliasesDisplay">Aliases:</string>
    <string name="birthDisplay">Place of Birth:</string>
    <string name="firstAppDisplay">First Appearance:</string>
    <string name="publisherDisplay">Publisher:</string>
    <string name="alignmentDisplay">Alignment:</string>
    <string name="genderDisplay">Gender:</string>
    <string name="raceDisplay">Race:</string>
    <string name="heightDisplay">Height:</string>
    <string name="weightDisplay">Weight:</string>
    <string name="eyeDisplay">Eye Color:</string>
    <string name="hairDisplay">Hair Color:</string>
    <string name="occupationDisplay">Occupation:</string>
    <string name="groupDisplay">Group Affiliation:</string>
    <string name="relativesDisplay">Relatives:</string>
    <string name="addFav">Added to Favorites</string>
    <string name="displays_image_of_the_comic_character">Displays image of the comic character</string>
    <string name="fab_button_to_add_to_widget_and_favourites">To add comic character to widget and Favourites</string>
    <string name="image_of_the_comic_character">Image of the comic character</string>
</resources>
