<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/displays_image_of_the_comic_character"
        android:padding="@dimen/dim_10_dp"
        android:id="@+id/id_poster" />
</LinearLayout>